# scx

./: Cargo.toml  meson.build
rust/scx_trace/: Cargo.toml  bpf_h  build.rs
rust/scx_trace/src/: lib.rs
rust/scx_trace/src/protos/: perfetto_scx.proto
scheds/rust/scx_gamer/: ANTICHEAT_SAFETY.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BUILD_STATUS.md  CACHYOS_INTEGRATION.md  CODE_REVIEW_FINDINGS.md  CODE_SAFETY_REVIEW.md  COMPREHENSIVE_PERFORMANCE_IMPACT_TABLE.md  Cargo.toml  DEAD_CODE_REVIEW.md  DEBUG_API.md  DESIGN.md  FINAL_INPUT_LATENCY_REVIEW.md  GAMING_PERFORMANCE_ANALYSIS.md  GPU_FRAME_PERFORMANCE_REVIEW.md  GPU_PHYSICAL_CORE_FIX.md  INSTALL.sh  INSTALLER_README.md  KEYBOARD_DEBUG.md  LATENCY_CHAIN_ANALYSIS.md  LOW_PRIORITY_ISSUES_ANALYSIS.md  PAGE_FLIP_ANTICHEAT_SAFETY.md  QUICK_START.md  RATE_CALCULATION.md  README.md  REALTIME_SCHEDULING_OPTIMIZATIONS.md  REFACTOR_COMPLETE.md  RING_BUFFER_DIRECT_BOOST_EXPLAINED.md  RING_BUFFER_IMPLEMENTATION.md  RUST_CODE_REVIEW_FINDINGS.md  SHUTDOWN_ANALYSIS.md  STEAM_WEBHELPER_THROTTLING.md  TECHNICAL_ARCHITECTURE.md  THREAD_CLASSIFICATION_REVIEW.md  THREAD_DETECTION_IMPROVEMENTS.md  TUI_CODE_REVIEW.md  TUI_DEBUGGING_REVIEW.md  UNINSTALL.sh  USERSPACE_CODE_REVIEW.md  build.rs  (+9 more)
scheds/rust/scx_gamer/Benchmarks/: WoW_2025-10-01_18-56-13.csv  WoW_2025-10-01_18-57-39.csv  WoW_2025-10-01_20-59-52.csv  analysis.py  analysis_report.txt  executive_summary.py  scx_gamer_enabled.csv  scx_off.csv  timing_analysis.py  timing_report.txt
scheds/rust/scx_gamer/docs/: ADVANCED_PERFORMANCE_REVIEW.md  AI_ANALYTICS_METRICS_PROPOSAL.md  ANTICHEAT_SAFETY.md  AUDIO_DETECTION_STRATEGY.md  BPF_CODE_REVIEW.md  BPF_VERIFIER_BOUNDS_CHECK_FIX.md  BPF_VERIFIER_OPTIMIZATIONS_CHANGELOG.md  CACHYOS_ARCHITECTURE.md  CATEGORY_PERFORMANCE_REVIEW.md  CHANGELOG.md  CHANGELOG_LMAX_REALTIME_OPTIMIZATIONS.md  CHANGELOG_OPTIMIZATIONS.md  CODE_SAFETY_REVIEW.md  COMPILATION_VERIFICATION.md  COMPREHENSIVE_PERFORMANCE_IMPACT_TABLE.md  CPU_CONTEXT_PREFETCHING_ENHANCEMENT.md  DEAD_CODE_REVIEW.md  DEBUG_API_METRICS_PROPOSAL.md  DETECTION_ROBUSTNESS_ANALYSIS.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  FENTRY_OPTIMIZATIONS.md  FILESYSTEM_PERFORMANCE_REVIEW.md  FINAL_INPUT_LATENCY_REVIEW.md  FRAME_RATE_DETECTION_ANALYSIS.md  GAME_DETECTION_ROBUSTNESS.md  GPU_FRAME_PERFORMANCE_REVIEW.md  GPU_WAKEUP_FRAME_RATE_VERIFICATION.md  HELPER_FUNCTION_PERFORMANCE_ANALYSIS.md  HFT_ADDITIONAL_PATTERNS_ANALYSIS.md  HFT_LOOP_UNROLLING_IMPLEMENTATION.md  HFT_LOW_LATENCY_PATTERNS_ANALYSIS.md  INPUT_CHAIN_REVIEW.md  INPUT_LATENCY_OPTIMIZATIONS.md  INPUT_LOCK_FREE_ANALYSIS.md  INSTALLER_README.md  INTEGRATION_COMPLETE.md  LATENCY_CHAIN_ANALYSIS.md  LIU_LAYLAND_1973_ANALYSIS.md  LMAX_DETAILED_EXPLANATION.md  (+35 more)
(+149 files in other folders)
