[package]
name = "scx_gamer"
version = "1.0.2"
authors = ["RitzDaCat"]
edition = "2021"
description = "Gaming-optimized scheduler focused on low frametime variance and input latency. https://github.com/sched-ext/scx/tree/main"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1.0.65"
ctrlc = { version = "3.1", features = ["termination"] }
clap = { version = "4.5.28", features = ["derive", "env", "unicode", "wrap_help"] }
crossbeam = "0.8.4"
evdev = "0.12"
libbpf-rs = "=0.26.0-beta.1"
libc = "0.2"
log = "0.4.17"
scx_stats = { path = "../../../rust/scx_stats", version = "1.0.16" }
scx_stats_derive = { path = "../../../rust/scx_stats/scx_stats_derive", version = "1.0.16" }
scx_utils = { path = "../../../rust/scx_utils", version = "1.0.21", features = ["autopower"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
nix = { version = "0.28", default-features = false, features = ["event", "time", "sched", "user", "fs", "resource"] }
inotify = "0.10"
drm = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zbus = { version = "4.1", default-features = false, features = ["blocking", "async-io"] }
wayland-client = { version = "0.31", default-features = false }
wayland-protocols = { version = "0.32", default-features = false, features = ["client", "unstable"] }
dirs = "5.0"
rand = "0.8"
rustc-hash = "2.0"
ahash = "0.8"
once_cell = "1.19"
arc-swap = "1.7"
ratatui = "0.29"
crossterm = "0.28"
udev = "0.8"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "signal", "io-util", "net"] }
tokio-util = "0.7"
futures = "0.3"
tempfile = "3.23.0"

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
scx_cargo = { path = "../../../rust/scx_cargo", version = "1.0.21" }
wayland-scanner = "0.31"
wayland-protocols = { version = "0.32", default-features = false, features = ["client", "unstable"] }

# Pending bench removed so release builds succeed without missing sources.

[features]
enable_backtrace = []
full_tui = []
proc_monitor = []
